# WorkM8

./: .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
src/api/jooble/: client.py  fetch_jobs.py  jobs.py
src/app/: main.py  pipeline_loader.py  ui_scrapers.py
src/embeddings/: generate_embeddings.py
src/pipelines/: run_jooble_api.py  run_scrape.py
src/pipelines/python/: save_final_data.py
src/scraping/globalLogic/: scrapper.py
src/scraping/google/: scraper.py
src/scraping/withSecure/: scrapper.py
